@@ -736,6 +736,9 @@ ONEFILTER_TARGET_FILENAME_ENCODING=Translated Filename Pattern
 
 POFILTER_FILTER_NAME=PO Files
 
+# XtagFilter.java
+XTAGFILTER_FILTER_NAME=QuarkXPress CopyFlow Gold Files
+
 # TextFilter.java
 
 TEXTFILTER_FILTER_NAME=Text Files
